fix: margins on small-width device

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -261,15 +261,15 @@
   .hexRowOdd {
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: minmax(auto, 1fr);
-    margin-left: 2.5%;
-    margin-right: 2.5%;
+    margin-left: -5%;
+    margin-right: -5%;
   }
   
   .hexRowEven {
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: minmax(auto, 1fr);
-    margin-left: 2.5%;
-    margin-right: 2.5%;
+    margin-left: -5%;
+    margin-right: -5%;
   }
 
   .hex {
@@ -316,7 +316,6 @@ a.card > div {
   /* 中央に配置 */
   top: 50%;
   left: 50%;
-  /* 要素の中心を基準にして配置 */
   transform: translate(-50%, -50%);
   color: white;
   z-index: 10;
